--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,17 @@
 
 /* Your CSS Code here. */
+
+ul
+{
+	display: flex;
+	justify-content:space-between;
+}
+li
+{
+	list-style-type:none;
+}
+
+a
+{
+	text-decoration:none;
+}
